# breadboard

./: .gitignore  CONTRIBUTING.md  DOLT_REMOTE.md  Makefile  README.md  adaptive_iter.py  cli_isolated_agent.py  cli_run_openai_agent.py  cmmtubpm4fpjg6tbed5kdfejdomhbopn.darc  lsp_deployment.py  lsp_manager.py  lsp_manager_v2.py  main.py  manifest  pyproject.toml  requirements-atp.txt  requirements-core.txt  requirements.txt  requirements_web.txt  tool_calling_performance.db
.beads_local/: beads.db  beads.db-shm  beads.db-wal  beads.left.meta.json  issues.jsonl
agent_configs/: atp_bb_aristotle_match_codexmini_v1.yaml  atp_hilbert_like_gpt54_v1.yaml  atp_hilbert_like_gpt54_v2.yaml  atp_hilbert_shell_gpt54_v1.yaml  base_v2.yaml  breadboard_tui_engine_smoke_mock.yaml  claude_code_2-1-63_e4_3-6-2026.yaml  claude_code_haiku45_c_fs_acceptEdits.yaml  claude_code_haiku45_c_fs_v2.yaml  claude_code_haiku45_e4_replay__codex0_1070_claude2_0_72_opencode1_2_17_20260305.yaml  claude_code_haiku45_e4_replay__codex0_1070_claude2_1_63_opencode1_2_17_20260305.yaml  claude_code_haiku45_phase8_async_live.yaml  claude_code_haiku45_phase8_wakeup_replay.yaml  claude_code_sonnet45_c_fs_guardrails.yaml  claude_code_sonnet45_c_fs_v2.yaml  codex_0-107-0_e4_3-6-2026.yaml  codex_cli_gpt51mini_e4_live.yaml  codex_cli_gpt51mini_e4_live__codex0_1070_claude2_1_63_opencode1_2_17_20260305.yaml  codex_cli_gpt51mini_mvi_parity.yaml  longrun_conservative_v1.yaml  multi_agent_sync_main.yaml  oh_my_opencode_3-10-0_e4_3-6-2026.yaml  oh_my_opencode_e4_phase8_async_subagents_v1_replay.yaml  oh_my_opencode_e4_phase8_async_subagents_v1_replay__codex0_1070_claude2_1_63_opencode1_2_17_ohmyopencode3_10_0_20260305.yaml  oh_my_opencode_phase8_async_live.yaml  opencode_1-2-17_e4_3-6-2026.yaml  opencode_cli_mock_guardrails.yaml  opencode_cli_mock_guardrails_prompt_edit.yaml  opencode_cli_mock_workspace_guard.yaml  opencode_e4_glob_grep_sentinel_replay.yaml  opencode_e4_glob_grep_sentinel_replay__codex0_1070_claude2_0_72_opencode1_2_17_20260305.yaml  opencode_e4_glob_grep_sentinel_replay__codex0_1070_claude2_1_63_opencode1_2_17_20260305.yaml  opencode_e4_mvi_replay.yaml  opencode_e4_mvi_replay__codex0_1070_claude2_0_72_opencode1_2_17_20260305.yaml  opencode_e4_mvi_replay__codex0_1070_claude2_1_63_opencode1_2_17_20260305.yaml  opencode_e4_oc_protofs_gpt5nano_replay__codex0_1070_claude2_1_63_opencode1_2_17_20260305.yaml  opencode_e4_patch_todo_sentinel_replay.yaml  opencode_e4_patch_todo_sentinel_replay__codex0_1070_claude2_1_63_opencode1_2_17_20260305.yaml  opencode_e4_toolcall_repair_sentinel_replay__codex0_1070_claude2_1_63_opencode1_2_17_20260305.yaml  opencode_e4_webfetch_sentinel_replay.yaml  (+24 more)
agentic_coder_prototype/: __init__.py  agent.py  agent_llm_openai.py  agent_llm_openai_legacy.py  agent_llm_openai_original.py  agent_session.py  conductor_bootstrap.py  conductor_components.py  conductor_context.py  conductor_execution.py  conductor_loop.py  conductor_modes.py  conductor_patching.py  context_window_guard.py  engine.py  guardrail_coordinator.py  guardrail_orchestrator.py  guardrails.py  loop_detection.py  model_registry.py  parity.py  parity_manifest.py  parity_runner.py  permission_broker.py  permission_rules_store.py  plan_bootstrapper.py  policy_pack.py  provider_adapters.py  provider_capabilities.py  provider_capability_probe.py  provider_health.py  provider_invoker.py  provider_ir.py  provider_metrics.py  provider_normalizer.py  provider_routing.py  provider_runtime.py  provider_runtime_replay.py  reasoning_trace_store.py  replay.py  (+10 more)
bb_webapp/: .env.production  .env.test  .gitignore  GATE_REPORT.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
breadboard/: __init__.py  lean_repl.py  lsp_deployment.py  lsp_manager.py  lsp_manager_v2.py  opencode_patch.py  sandbox.py  sandbox_docker.py  sandbox_driver.py  sandbox_factory.py  sandbox_firecracker.py  sandbox_lsp_integration.py  sandbox_v2.py  sandbox_virtualized.py  sdk_client.py  search_loop_v1.py  vsock_protocol.py
breadboard_ext/: __init__.py
breadboard_sdk/: __init__.py  client.py  (+7 more)
(+5956 files in other folders)
