[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "breadboard-harness-cli"
version = "0.0.0"
description = "BreadBoard harness authoring front door"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.18", "PyYAML>=6.0"]

[project.scripts]
bbh = "scripts.breadboard_cli:main"

[tool.setuptools]
packages = ["scripts", "agentic_coder_prototype", "agentic_coder_prototype.compilation", "breadboard_sdk", "breadboard", "breadboard.product", "breadboard.product.harness", "breadboard.product.harness.modules", "breadboard.product.runtime", "breadboard.product.coordination", "conformance"]
py-modules = ["adaptive_iter"]

[tool.setuptools.data-files]
"agent_configs/templates" = ["agent_configs/templates/minimal_harness.v3.yaml"]
"agent_configs/templates/" = ["agent_configs/templates/representative_harness.v1.yaml"]
"contracts/kernel/schemas" = ["contracts/kernel/schemas/*.schema.json"]
"contracts/public/schemas" = ["contracts/public/schemas/bb.harness_definition.v1.schema.json", "contracts/public/schemas/bb.session.v1.schema.json", "contracts/public/schemas/bb.artifact_manifest.v1.schema.json"]
