[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "breadboard-harness-cli"
version = "0.0.0"
description = "BreadBoard harness authoring front door"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.100", "jsonschema>=4.18", "python-dotenv>=1.0", "python-multipart>=0.0.9", "PyYAML>=6.0", "ray>=2.0", "requests>=2.28", "uvicorn>=0.20"]

[project.scripts]
breadboard = "breadboard.product.cli:main"
bbh = "scripts.breadboard_cli:main"

[tool.setuptools]
py-modules = ["adaptive_iter"]
include-package-data = false
[tool.setuptools.packages.find]
where = ["."]
include = ["agent_configs*", "agentic_coder_prototype*", "breadboard*", "config*", "conformance*", "contracts*", "docs", "docs.conformance", "implementations*", "scripts*"]
exclude = ["breadboard_ext*", "docs.conformance.evidence_snapshots*", "docs_tmp*"]
namespaces = true

[tool.setuptools.package-data]
"agent_configs.templates" = ["*.yaml"]
"agent_configs.templates.prompts" = ["*.md"]
"config.e4_lanes" = ["*.yaml", "*.json"]
"conformance.comparators" = ["registry.json"]
"contracts.kernel.examples" = ["*.json"]
"contracts.kernel.registries" = ["*.json"]
"contracts.kernel.schemas" = ["*.schema.json"]
"contracts.public" = ["operations.v1.json"]
"contracts.public.schemas" = ["*.schema.json"]
"docs.conformance" = ["e4_lane_inventory.json"]
"implementations.tools.defs" = ["*.yaml"]

[tool.setuptools.exclude-package-data]
"docs.conformance" = ["evidence_snapshots/**"]
